# firesquid

./: .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yaml
.github/workflows/: branches.yaml  ci.yaml  main.yaml
debian/: firesquid.service
debian/scripts/: postinst  postrm  prerm
docs/: building-rootfs.md  compiling-linux-kernel.md
scripts/: getassets.sh
src/: cli.rs  cli.yml  consts.rs  daemon.rs  error.rs  folders.rs  io.rs  main.rs  state.rs  tmp.rs
src/api/: create.rs  delete.rs  kill.rs  list.rs  mod.rs
src/cli/: cli.yml  mod.rs
src/cp/: mod.rs
src/iops/: drive.rs  folder.rs  kernel.rs  mod.rs  socket.rs
src/tmp/: folder.rs  mod.rs
src/vm/: child.rs  drive.rs  http.rs  mod.rs  socket.rs
unix-client/: Cargo.toml
unix-client/src/: client.rs  io.rs  lib.rs
