[package]
authors = ["Andrei Sousa <sousandrei@gmail.com>"]
edition = "2021"
name = "firesquid"
readme = "README.md"
version = "0.1.0"

[package.metadata.deb]
assets = [
    [
        "target/release/firesquid",
        "usr/bin/firesquid",
        "755",
    ],
    [
        "debian/firesquid.service",
        "/lib/systemd/system/firesquid.service",
        "644",
    ],
    [
        "assets/firecracker",
        "usr/bin/firecracker",
        "755",
    ],
    [
        "assets/rootfs.ext4",
        "opt/firesquid/rootfs.ext4",
        "644",
    ],
    [
        "assets/vmlinux",
        "opt/firesquid/vmlinux",
        "644",
    ],
]
depends = "$auto, systemd"
extended-description = "firesquid daemon"
maintainer-scripts = "debian/scripts"
priority = "optional"
section = "admin"

[dependencies]
unix-client = { path = "unix-client" }

bytes = "1.5.0"
chrono = "0.4.22"
clap = { version = "3.2.22", features = ["yaml"] }
http-body-util = "0.1.0"
hyper = { version = "1.0.1", features = ["client", "http1"] }
pin-project-lite = "0.2.13"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "net",
] }
tokio-stream = { version = "0.1.9", features = ['net'] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
warp = "0.3.2"
