[package]
authors = ["Andrei Sousa <sousandrei@gmail.com>"]
edition = "2021"
name = "firesquid"
readme = "README.md"
version = "0.1.1"

[package.metadata.deb]
assets = [
    [
        "target/release/firesquid",
        "usr/bin/firesquid",
        "755",
    ],
    [
        "debian/firesquid.service",
        "/lib/systemd/system/firesquid.service",
        "644",
    ],
    [
        "assets/firecracker",
        "usr/bin/firecracker",
        "755",
    ],
    [
        "assets/rootfs.ext4",
        "opt/firesquid/rootfs.ext4",
        "644",
    ],
    [
        "assets/vmlinux",
        "opt/firesquid/vmlinux",
        "644",
    ],
]
depends = "$auto, systemd"
extended-description = "firesquid daemon"
maintainer-scripts = "debian/scripts"
priority = "optional"
section = "admin"

[dependencies]
unix-client = { path = "unix-client" }

bytes = "1.6.0"
chrono = "0.4.38"
clap = "4.5.6"
http-body-util = "0.1.2"
hyper = { version = "1.1.0", features = ["client", "http1"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = [
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-stream = { version = "0.1.15", features = ['net'] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
warp = "0.3.7"
